--- a/charts/ldap-scim-bridge/templates/secret.yaml
+++ b/charts/ldap-scim-bridge/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ldap-scim-bridge
+  name: {{ .Release.Name }}
   labels:
     app: ldap-scim-bridge
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
