--- a/hack/helmfile-single.yaml
+++ b/hack/helmfile-single.yaml
@@ -18,6 +18,8 @@ environments:
 repositories:
   - name: stable
     url: 'https://charts.helm.sh/stable'
+  - name: ingress
+    url: 'https://kubernetes.github.io/ingress-nginx'
 
 releases:
   - name: '{{ .Values.namespace }}-fake-aws'
