--- a/services/cargohold/package.yaml
+++ b/services/cargohold/package.yaml
@@ -82,6 +82,7 @@ executables:
     - uuid >=1.3
     - wai-utilities >=0.12
     - wire-api
+    - wire-api-federation
   cargohold:
     main: src/Main.hs
     ghc-options:
