--- a/services/cargohold/cargohold.integration.yaml
+++ b/services/cargohold/cargohold.integration.yaml
@@ -2,6 +2,10 @@ cargohold:
   host: 0.0.0.0
   port: 8084
 
+federator:
+  host: 127.0.0.1
+  port: 8097
+
 aws:
   s3Bucket: dummy-bucket # <-- insert-bucket-name-here
   s3Endpoint: http://localhost:4570 # https://s3-eu-west-1.amazonaws.com:443
