--- a/services/galley/package.yaml
+++ b/services/galley/package.yaml
@@ -182,6 +182,7 @@ executables:
     - http-client
     - http-client-openssl
     - http-client-tls
+    - http-media
     - http-types
     - lens
     - lens-aeson
