--- a/services/brig/package.yaml
+++ b/services/brig/package.yaml
@@ -226,6 +226,7 @@ executables:
     - http-api-data
     - http-client
     - http-client-tls >=0.2
+    - http-media
     - http-types
     - imports
     - lens >=3.9
