--- a/services/cargohold/package.yaml
+++ b/services/cargohold/package.yaml
@@ -23,6 +23,7 @@ dependencies:
 - HsOpenSSL >=0.11
 - http-client >=0.4
 - http-types >=0.8
+- kan-extensions
 - mime >=0.4
 - safe >=0.3
 - text >=1.1
@@ -73,8 +74,9 @@ executables:
     - cargohold-types
     - conduit
     - cryptonite
+    - federator
     - http-client-tls >=0.2
-    - kan-extensions
+    - http-media
     - lens >=3.8
     - mmorph
     - mtl
@@ -87,6 +89,7 @@ executables:
     - time >=1.5
     - types-common >=0.7
     - uuid >=1.3
+    - wai
     - wai-utilities >=0.12
     - wire-api
     - wire-api-federation
