--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -4,7 +4,7 @@ cabal-version: 2.0
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 513c0f5104342fb14b0246f7c44733a84ec36fae97633fc55cb209e0e0bcd087
+-- hash: 244ca5e0c12867ef47ffcfbc056775381028fbc85e5c57eb280afe842e3499d9
 
 name:           brig
 version:        2.0
@@ -167,6 +167,7 @@ library
     , errors >=1.4
     , exceptions >=0.5
     , extended
+    , extra
     , filepath >=1.3
     , fsnotify >=0.2
     , galley-types >=0.75.3
@@ -496,6 +497,7 @@ test-suite brig-tests
     , dns-util
     , http-types
     , imports
+    , iproute
     , polysemy
     , polysemy-wire-zoo
     , retry
