--- a/services/brig/package.yaml
+++ b/services/brig/package.yaml
@@ -57,6 +57,7 @@ library:
   - errors >=1.4
   - exceptions >=0.5
   - extended
+  - extra
   - filepath >=1.3
   - fsnotify >=0.2
   - galley-types >=0.75.3
@@ -160,6 +161,7 @@ tests:
     - dns-util
     - http-types
     - imports
+    - iproute
     - polysemy
     - polysemy-wire-zoo
     - retry
