--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,9 @@ hie.yaml
 hie.orig.yaml
 stack-dev.yaml
 
+# HIE db files (e.g. generated for stan)
+*.hie
+
 # generated files under .local
 .local
 
