--- a/charts/brig/templates/configmap.yaml
+++ b/charts/brig/templates/configmap.yaml
@@ -175,8 +175,6 @@ data:
       {{- if .sftDiscoveryIntervalSeconds }}
       sftDiscoveryIntervalSeconds: {{ .sftDiscoveryIntervalSeconds }}
       {{- end }}
-      sftLookupDomain: {{ required "Missing value: .sft.sftLookupDomain" .sftLookupDomain }}
-      sftLookupPort: {{ required "Missing value: .sft.sftLookupPort" .sftLookupPort }}
     {{- end }}
     {{- end }}
 
@@ -229,6 +227,12 @@ data:
       {{- end }}
       {{- if .setSftStaticUrl }}
       setSftStaticUrl: {{ .setSftStaticUrl }}
+      {{- end }}
+      {{- if .sftLookupDomain }}
+      sftLookupDomain: {{ .sftLookupDomain }}
+      {{- end }}
+      {{- if .sftLookupPort }}
+      sftLookupPort: {{ .sftLookupPort }}
       {{- end }}
     {{- end }}
   {{- end }}
