Make insecure requests to SFT servers
- This insecure connection will have to be guarded by a Brig
configuration flag that is yet to be introduced

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -154,6 +154,7 @@ library
     , cassandra-util >=0.16.2
     , comonad
     , conduit >=1.2.8
+    , connection
     , containers >=0.5
     , cookie >=0.4
     , cryptobox-haskell >=0.1.1
