Group the lookup domain and port in Brig configuration
- Also fix how the SFT environment is computed. Before, it would rely on
the SFT lookup parameters to be set to keep on working. This makes SFT
lookup parameters truly optional.

--- a/charts/brig/templates/configmap.yaml
+++ b/charts/brig/templates/configmap.yaml
@@ -228,11 +228,12 @@ data:
       {{- if .setSftStaticUrl }}
       setSftStaticUrl: {{ .setSftStaticUrl }}
       {{- end }}
-      {{- if .sftLookupDomain }}
-      sftLookupDomain: {{ .sftLookupDomain }}
+      {{- if .setSftLookup }}
+      {{- with .setSftLookup }}
+      setSftLookup:
+        domain: {{ required "Missing value: .setSftLookup.domain" .setSftLookup.domain }}
+        port: {{ required "Missing value: .setSftLookup.port" .setSftLookup.port }}
       {{- end }}
-      {{- if .sftLookupPort }}
-      sftLookupPort: {{ .sftLookupPort }}
       {{- end }}
     {{- end }}
   {{- end }}
