--- a/services/brig/brig.integration.yaml
+++ b/services/brig/brig.integration.yaml
@@ -180,9 +180,9 @@ optSettings:
   setFeatureFlags:  # see #RefConfigOptions in `/docs/reference`
   # FUTUREWORK: Replace the following SFT DNS lookup parameters with something
   # to be added to the CI environment
-  setSftLookupDomain:
-    sftd.integration-tests.zinfra.io
-  setSftLookupPort: 443
+  setSftLookup:
+    domain: sftd.integration-tests.zinfra.io
+    port: 443
 
 logLevel: Warn
 # ^ NOTE: We log too much in brig, if we set this to Info like other services, running tests
