Add a Brig configuration flag for insecure connections in testing

--- a/charts/brig/templates/configmap.yaml
+++ b/charts/brig/templates/configmap.yaml
@@ -233,6 +233,7 @@ data:
       setSftLookup:
         domain: {{ required "Missing value: .setSftLookup.domain" .setSftLookup.domain }}
         port: {{ required "Missing value: .setSftLookup.port" .setSftLookup.port }}
+        isTestingEnvironment: {{ .setSftLookup.isTestingEnvironment }}
       {{- end }}
       {{- end }}
     {{- end }}
