Enable Insecure Requests for SFT Lookups in a Test Environment (#2014)
* Move SFT lookup parameters to another configuration section
* Fix a request to an SFT's `GET /sft/url`
* Group the SFT lookup domain and port in Brig configuration
* Fix how the SFT environment is computed. Before, it would rely on
the SFT lookup parameters to be set to keep on working. This change makes SFT
lookup parameters truly optional.
* Add a Brig configuration flag for insecure connections in test environments
* Introduce an effect for SFT

--- a/charts/brig/templates/configmap.yaml
+++ b/charts/brig/templates/configmap.yaml
@@ -175,8 +175,6 @@ data:
       {{- if .sftDiscoveryIntervalSeconds }}
       sftDiscoveryIntervalSeconds: {{ .sftDiscoveryIntervalSeconds }}
       {{- end }}
-      sftLookupDomain: {{ required "Missing value: .sft.sftLookupDomain" .sftLookupDomain }}
-      sftLookupPort: {{ required "Missing value: .sft.sftLookupPort" .sftLookupPort }}
     {{- end }}
     {{- end }}
 
@@ -229,6 +227,14 @@ data:
       {{- end }}
       {{- if .setSftStaticUrl }}
       setSftStaticUrl: {{ .setSftStaticUrl }}
+      {{- end }}
+      {{- if .setSftLookup }}
+      {{- with .setSftLookup }}
+      setSftLookup:
+        domain: {{ required "Missing value: .setSftLookup.domain" .setSftLookup.domain }}
+        port: {{ required "Missing value: .setSftLookup.port" .setSftLookup.port }}
+        isTestingEnvironment: {{ .setSftLookup.isTestingEnvironment }}
+      {{- end }}
       {{- end }}
     {{- end }}
   {{- end }}
