--- a/services/brig/package.yaml
+++ b/services/brig/package.yaml
@@ -44,6 +44,7 @@ library:
   - cassandra-util >=0.16.2
   - comonad
   - conduit >=1.2.8
+  - connection
   - containers >=0.5
   - cookie >=0.4
   - cryptobox-haskell >=0.1.1
@@ -71,6 +72,7 @@ library:
   - html-entities >=1.1
   - http-client >=0.5
   - http-client-openssl >=0.2
+  - http-client-tls
   - http-media
   - http-types >=0.8
   - imports
