--- a/charts/brig/templates/configmap.yaml
+++ b/charts/brig/templates/configmap.yaml
@@ -231,9 +231,11 @@ data:
       {{- if .setSftLookup }}
       {{- with .setSftLookup }}
       setSftLookup:
-        domain: {{ required "Missing value: .setSftLookup.domain" .setSftLookup.domain }}
-        port: {{ required "Missing value: .setSftLookup.port" .setSftLookup.port }}
-        isTestingEnvironment: {{ .setSftLookup.isTestingEnvironment }}
+        domain: {{ required "Missing value: .setSftLookup.domain" .domain }}
+        port: {{ required "Missing value: .setSftLookup.port" .port }}
+        {{- if .isTestingEnvironment }}
+        isTestingEnvironment: {{ .isTestingEnvironment }}
+        {{- end }}
       {{- end }}
       {{- end }}
     {{- end }}
