--- a/charts/cargohold/values.yaml
+++ b/charts/cargohold/values.yaml
@@ -14,6 +14,7 @@ resources:
     cpu: "500m"
 config:
   logLevel: Info
+  enableFederator: false # keep enableFederator default in sync with brig and galley chart's config.enableFederator as well as wire-server chart's tag.federator
   aws:
     region: "eu-west-1"
     s3Bucket: assets
