--- a/charts/sftd/templates/deployment-join-call.yaml
+++ b/charts/sftd/templates/deployment-join-call.yaml
@@ -30,7 +30,7 @@ spec:
           emptyDir: {}
       containers:
         - name: sftd-disco
-          image: quay.io/wire/sftd_disco:latest # TODO configure + version
+          image: quay.io/wire/sftd_disco:wip-1 # TODO configure + version
           volumeMounts:
           - name: sftd-disco
             mountPath: /etc/wire/sftd-disco
