--- a/tools/sftd_disco/Dockerfile
+++ b/tools/sftd_disco/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.15.0
 
-RUN apk add --no-cache curl bash openssl bind-tools
+RUN apk add --no-cache curl bash openssl bind-tools jq
 
 COPY tools/sftd_disco/sftd_disco.sh /usr/bin/sftd_disco.sh
 
