--- a/libs/wire-api/package.yaml
+++ b/libs/wire-api/package.yaml
@@ -75,6 +75,7 @@ library:
   - servant-multipart
   - servant-server
   - servant-swagger
+  - servant-websockets
   - schema-profunctor
   - singletons
   - sop-core
