--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -200,6 +200,7 @@ library
     , servant-server
     , servant-swagger
     , servant-swagger-ui
+    , servant-websockets
     , singletons
     , sop-core
     , string-conversions
