--- a/services/brig/package.yaml
+++ b/services/brig/package.yaml
@@ -163,8 +163,10 @@ tests:
     - containers
     - dns
     - dns-util
+    - HsOpenSSL
     - http-types
     - imports
+    - lens
     - polysemy
     - polysemy-wire-zoo
     - retry
