--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -4,7 +4,7 @@ cabal-version: 2.0
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 2f8a3d719633015dac9204d43e0b4c79ce5b21b022cd9d4cce3868feea9460e8
+-- hash: 350e615ec20264419ad3244b5ba5b93c8a0bbea7dc35db5f300a3fbf3ef4e4c0
 
 name:           brig
 version:        2.0
@@ -156,7 +156,6 @@ library
     , cassandra-util >=0.16.2
     , comonad
     , conduit >=1.2.8
-    , connection
     , containers >=0.5
     , cookie >=0.4
     , cryptobox-haskell >=0.1.1
@@ -170,7 +169,6 @@ library
     , errors >=1.4
     , exceptions >=0.5
     , extended
-    , extra
     , filepath >=1.3
     , fsnotify >=0.2
     , galley-types >=0.75.3
@@ -180,7 +178,6 @@ library
     , html-entities >=1.1
     , http-client >=0.5
     , http-client-openssl >=0.2
-    , http-client-tls
     , http-media
     , http-types >=0.8
     , imports
@@ -212,6 +209,7 @@ library
     , safe >=0.3
     , safe-exceptions >=0.1
     , saml2-web-sso
+    , schema-profunctor
     , scientific >=0.3.4
     , scrypt >=0.5
     , servant
@@ -501,7 +499,7 @@ test-suite brig-tests
     , dns-util
     , http-types
     , imports
-    , iproute
+    , lens
     , polysemy
     , polysemy-wire-zoo
     , retry
