--- a/libs/wire-api-federation/wire-api-federation.cabal
+++ b/libs/wire-api-federation/wire-api-federation.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: f62744549c34b54e9900b31c33a4ebad5c51ac13ec44010ad2da6c6ca67fdc29
+-- hash: 41830e5193234bf215634c6d48cfa68be3a633d1f2750d9f8e3c237f37021709
 
 name:           wire-api-federation
 version:        0.1.0
@@ -28,6 +28,7 @@ library
       Wire.API.Federation.Client
       Wire.API.Federation.Component
       Wire.API.Federation.Domain
+      Wire.API.Federation.Endpoint
       Wire.API.Federation.Error
       Wire.API.Federation.Event
   other-modules:
