Servantify Cannon Public endpoint (#2024)
Servantify Cannon Public endpoint

* Clean up
* Remove servant-websockets by inlining it and fixing a subtle bug
  regarding failing requests
* Better swagger doc inspired by MultiVerb
* Add changelog entry
* Update comment regarding the origin of WebSocketPending
* Fix review issues

Co-authored-by: Paolo Capriotti <paolo@capriotti.io>

--- a/services/cannon/package.yaml
+++ b/services/cannon/package.yaml
@@ -34,6 +34,8 @@ library:
   - mwc-random >=0.13
   - retry >=0.7
   - safe-exceptions
+  - servant
+  - servant-server
   - strict >=0.3.2
   - swagger >=0.2
   - text >=1.1
@@ -49,6 +51,7 @@ library:
   - wai-websockets >=3.0
   - warp >=3.0
   - websockets >=0.11.2
+  - wire-api
 executables:
   cannon:
     main: src/Main.hs
