--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: f2aacb81c413e8753829ba09eb08d1d2524c973346739389dfeb4284d4a16ebd
+-- hash: 58d272ac852b49af92f6387c08a6a4f797f799df93374f68296cb67600b00653
 
 name:           wire-api
 version:        0.1.0
@@ -56,12 +56,14 @@ library
       Wire.API.Routes.MultiVerb
       Wire.API.Routes.Public
       Wire.API.Routes.Public.Brig
+      Wire.API.Routes.Public.Cannon
       Wire.API.Routes.Public.Cargohold
       Wire.API.Routes.Public.Galley
       Wire.API.Routes.Public.LegalHold
       Wire.API.Routes.Public.Spar
       Wire.API.Routes.Public.Util
       Wire.API.Routes.QualifiedCapture
+      Wire.API.Routes.WebSocket
       Wire.API.ServantProto
       Wire.API.Swagger
       Wire.API.Team
@@ -173,6 +175,8 @@ library
     , uuid >=1.3
     , vector >=0.12
     , wai
+    , wai-websockets
+    , websockets
     , wire-message-proto-lens
     , x509
   default-language: Haskell2010
