--- a/services/cannon/cannon.cabal
+++ b/services/cannon/cannon.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 87d683d193f2ad916c72f4c84d0816911f7d894cfbffed36f361436005571339
+-- hash: 5c6e877bcba6cc776493801203320fecfcec06a1384cc5cb0150262e4ef0f3b8
 
 name:           cannon
 version:        0.31.0
@@ -25,7 +25,6 @@ flag static
 
 library
   exposed-modules:
-      Cannon.API
       Cannon.API.Internal
       Cannon.API.Public
       Cannon.App
@@ -63,6 +62,8 @@ library
     , mwc-random >=0.13
     , retry >=0.7
     , safe-exceptions
+    , servant
+    , servant-server
     , strict >=0.3.2
     , swagger >=0.2
     , text >=1.1
@@ -78,6 +79,7 @@ library
     , wai-websockets >=3.0
     , warp >=3.0
     , websockets >=0.11.2
+    , wire-api
   default-language: Haskell2010
 
 executable cannon
