--- a/services/brig/package.yaml
+++ b/services/brig/package.yaml
@@ -108,6 +108,7 @@ library:
   - scrypt >=0.5
   - servant
   - servant-client
+  - servant-client-core
   - servant-server
   - servant-swagger
   - servant-swagger-ui
