added access role v2
response contains both access roles

wip

conversion in ToSchema instance

pushed old access roles to the boundaries

wip

schema migration

update brig

wip fix tests

fix golden tests

fix galley integration

fix brig-integration

fix wire-api-federation golden tests

fix problems

update cql schema ref

use to/from access role legacy imported from wire-api

roundtrip for access roles old and new

(re-)added golden test for access role legacy

(re-)added golden test for access role legacy

access role conversion test (fails)

wip

wip

clean up

business logic

--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -226,7 +226,7 @@ test-suite wire-api-golden-tests
       Test.Wire.API.Golden.FromJSON
       Test.Wire.API.Golden.Generated
       Test.Wire.API.Golden.Generated.Access_user
-      Test.Wire.API.Golden.Generated.AccessRole_user
+      Test.Wire.API.Golden.Generated.AccessRoleLegacy_user
       Test.Wire.API.Golden.Generated.AccessToken_user
       Test.Wire.API.Golden.Generated.Action_user
       Test.Wire.API.Golden.Generated.Activate_user
@@ -552,6 +552,7 @@ test-suite wire-api-tests
   main-is: Main.hs
   other-modules:
       Test.Wire.API.Call.Config
+      Test.Wire.API.Conversation
       Test.Wire.API.Roundtrip.Aeson
       Test.Wire.API.Roundtrip.ByteString
       Test.Wire.API.Roundtrip.CSV
